--- a/npm/package.json
+++ b/npm/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "vue3-mini-weather",
+  "name": "@dovak/vue3-mini-weather-next",
   "description": "基于 Vue3.x 的迷你天气预报组件",
   "keyword": "vue3 weather mini-weather",
-  "version": "0.1.2",
-  "author": "aidioute",
+  "version": "0.0.1",
+  "author": "hjiachuan, dovahkinn",
   "license": "MIT",
   "private": false,
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "axios": "^1.1.3",
     "lottie-web": "^5.9.6",
