--- a/npm/package.json
+++ b/npm/package.json
@@ -2,11 +2,12 @@
   "name": "@dovak/vue3-mini-weather-next",
   "description": "基于 Vue3.x 的迷你天气预报组件",
   "keyword": "vue3 weather mini-weather",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "hjiachuan, dovahkinn",
   "license": "MIT",
   "private": false,
   "main": "index.js",
+  "types": "index.d.ts",
   "publishConfig": {
     "access": "public"
   },
