--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.2",
   "author": "aidioute",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "type": "module",
   "scripts": {
     "serve": "vite",
